fix poor visibility on links

--- a/src/components/complex/footer/style.scss
+++ b/src/components/complex/footer/style.scss
@@ -1,3 +1,5 @@
+@import "src/theme/colours";
+
 footer {
   width: 1200px;
   margin: 128px auto 64px;
@@ -63,7 +65,7 @@ footer {
 
             a {
               text-decoration: none;
-              color: #20C5E5;
+              color: $vivid-cerulean;
             }
           }
         }
